--- a/css/style.css
+++ b/css/style.css
@@ -130,3 +130,30 @@ body {
     border-radius: 50px;
 }
 
+.choice-buttons: {
+  background-color: grey;
+  color: black;
+  padding: 15px 15px;
+  text-align:center;
+  font-size: 14px;
+  width: 40%;
+  height: 100%;
+  display: inline-block
+  
+  
+}
+
+.choice-buttons-container {
+  background-color: transparent;
+  width: 100%;
+  height: 50px;
+  margin-bottom: 7%;
+  display:flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.game-attributes {
+  margin-top: -20px;
+  margin-bottom: 20px;
+}
