--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
   /* background-color: red; */
   background-image:url("../img/rio.jpeg");
   background-size: cover;
-  position: relative;
+  position:relative;
   height: 100vh;
   width: 100vw;
   margin: 0 auto;
@@ -17,14 +17,15 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+ 
 }
 
 .game-title {
   color:black;
   font-family: fantasy;
-  text-align: center;
+  text-align:end;
   text-decoration: solid;
-  margin-top: 10px;
+  
 }
 
 /* Game Container */
