--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
   /* background-color: red; */
   background-image:url("../img/rio.jpeg");
   background-size: cover;
-  position:relative;
+  position:;
   height: 100vh;
   width: 100vw;
   margin: 0 auto;
@@ -23,7 +23,7 @@ body {
 .game-title {
   color:black;
   font-family: fantasy;
-  text-align:end;
+  text-align: center;
   text-decoration: solid;
   
 }
